Fixes z-index issues

--- a/src/org/accesointeligente/client/views/RequestResponseView.css
+++ b/src/org/accesointeligente/client/views/RequestResponseView.css
@@ -122,5 +122,5 @@
 	position:fixed;
 	top: 70px;
 	margin-left: -80px;
-	z-index: 99;
+	z-index: -1;
 }
